# ghc-dump

./: .gitignore  .gitmodules  .travis.yml  Ast.hs  Convert.hs  Plugin.hs  README.md  README.mkd  cabal.project  corediff.cabal  ghc-dump.cabal  hie.yaml  notes.md  package.yaml  testdemo
.github/workflows/: haskell-ci.yml
app/: Main.hs
corediff/: .gitignore  LICENSE  README.md  corediff.cabal  stack.yaml
corediff/demos/: Compose.hs  Fac.hs  Flags.hs  T13031.hs
corediff/demos/ghc-8.92de9e/: Compose.pass-0000.cbor  Compose.pass-0001.cbor  Compose.pass-0002.cbor  Compose.pass-0003.cbor  Compose.pass-0004.cbor  Compose.pass-0008.cbor  Compose.pass-0012.cbor  Compose.pass-0013.cbor  Compose.pass-0022.cbor  Cpr.pass-0000.cbor  Cpr.pass-0001.cbor  Cpr.pass-0003.cbor  Cpr.pass-0006.cbor  Cpr.pass-0007.cbor  Cpr.pass-0011.cbor  Cpr.pass-0014.cbor  Cpr.pass-0018.cbor  Cpr.pass-0019.cbor  Cpr.pass-0022.cbor  Fac.pass-0001.cbor  Fac.pass-0003.cbor  Fac.pass-0004.cbor  Fac.pass-0011.cbor  Fac.pass-0015.cbor  Fac.pass-0016.cbor  Fac.pass-0020.cbor  Fac.pass-0021.cbor  Fac.pass-0022.cbor  Fac.pass-0023.cbor  Flags.pass-0001.cbor  Flags.pass-0002.cbor  Flags.pass-0007.cbor  Flags.pass-0014.cbor  Flags.pass-0016.cbor  Flags.pass-0019.cbor  Flags.pass-0023.cbor  (+28 more)
demos/: Cpr.hs  Maths.ds  Maths.hs  Maths.simpl  Maths2.hs  Pair1.hs  Pair2.hs  Pair3.hs
demos/ghc-8.11.0.20200610/: Compose.pass-0009.cbor  Compose.pass-0017.cbor  Compose.pass-0020.cbor  Cpr.pass-0005.cbor  Cpr.pass-0023.cbor  Fac.pass-0018.cbor  Flags.pass-0000.cbor  Flags.pass-0001.cbor  Flags.pass-0002.cbor  Flags.pass-0003.cbor  Flags.pass-0004.cbor  Flags.pass-0005.cbor  Flags.pass-0006.cbor  Flags.pass-0007.cbor  Flags.pass-0008.cbor  Flags.pass-0009.cbor  Flags.pass-0010.cbor  Flags.pass-0011.cbor  Flags.pass-0012.cbor  Flags.pass-0013.cbor  Flags.pass-0014.cbor  Flags.pass-0015.cbor  Flags.pass-0017.cbor  Flags.pass-0018.cbor  Flags.pass-0019.cbor  Flags.pass-0020.cbor  Flags.pass-0021.cbor  Flags.pass-0022.cbor  Flags.pass-0023.cbor  HelloWorld.pass-0006.cbor  Simple.pass-0000.cbor  Simple.pass-0001.cbor  Simple.pass-0002.cbor  Simple.pass-0003.cbor  Simple.pass-0004.cbor  Simple.pass-0005.cbor  Simple.pass-0012.cbor  Simple.pass-0015.cbor  Simple.pass-0016.cbor  Simple.pass-0017.cbor  (+16 more)
demos/ghc-8.8.3/: Flags.pass-0000.cbor  Flags.pass-0001.cbor  Flags.pass-0002.cbor  Flags.pass-0003.cbor  Flags.pass-0004.cbor  Flags.pass-0005.cbor  Flags.pass-0006.cbor  Flags.pass-0007.cbor  Flags.pass-0008.cbor  Flags.pass-0009.cbor  Flags.pass-0010.cbor  Flags.pass-0011.cbor  Flags.pass-0012.cbor  Flags.pass-0013.cbor  Flags.pass-0014.cbor  Flags.pass-0015.cbor  Flags.pass-0016.cbor  Flags.pass-0017.cbor  Flags.pass-0018.cbor  Flags.pass-0019.cbor  Flags.pass-0020.cbor  Flags.pass-0021.cbor  Flags.pass-0022.cbor  HelloWorld.pass-0000.cbor  HelloWorld.pass-0001.cbor  HelloWorld.pass-0002.cbor  HelloWorld.pass-0003.cbor  HelloWorld.pass-0004.cbor  HelloWorld.pass-0005.cbor  HelloWorld.pass-0006.cbor  HelloWorld.pass-0007.cbor  HelloWorld.pass-0008.cbor  HelloWorld.pass-0009.cbor  HelloWorld.pass-0010.cbor  HelloWorld.pass-0011.cbor  HelloWorld.pass-0012.cbor  HelloWorld.pass-0013.cbor  HelloWorld.pass-0014.cbor  HelloWorld.pass-0015.cbor  HelloWorld.pass-0016.cbor  (+17 more)
demos/ghc-8.92de9e/: Compose.pass-0005.cbor  Compose.pass-0006.cbor  Compose.pass-0007.cbor  Compose.pass-0011.cbor  Compose.pass-0014.cbor  Compose.pass-0015.cbor  Compose.pass-0018.cbor  Compose.pass-0019.cbor  Compose.pass-0021.cbor  Compose.pass-0023.cbor  Cpr.pass-0002.cbor  Cpr.pass-0004.cbor  Cpr.pass-0008.cbor  Cpr.pass-0009.cbor  Cpr.pass-0010.cbor  Cpr.pass-0012.cbor  Cpr.pass-0013.cbor  Cpr.pass-0015.cbor  Cpr.pass-0016.cbor  Cpr.pass-0017.cbor  Cpr.pass-0020.cbor  Fac.nouniq.verbose  Fac.pass-0000.cbor  Fac.pass-0002.cbor  Fac.pass-0005.cbor  Fac.pass-0006.cbor  Fac.pass-0007.cbor  Fac.pass-0008.cbor  Fac.pass-0009.cbor  Fac.pass-0010.cbor  Fac.pass-0012.cbor  Fac.pass-0013.cbor  Fac.pass-0014.cbor  Fac.pass-0017.cbor  Fac.pass-0019.cbor  Fac.verbose  Flags.pass-0012.cbor  Flags.pass-0013.cbor  Flags.pass-0015.cbor  Flags.pass-0018.cbor  (+45 more)
demos/ghc-9.1.ef9dbc8f/: Compose.pass-0004.cbor  Compose.pass-0006.cbor  Compose.pass-0008.cbor  Compose.pass-0013.cbor  Cpr.pass-0001.cbor  Cpr.pass-0006.cbor  Cpr.pass-0015.cbor  Cpr.pass-0021.cbor  Cpr.pass-0025.cbor  Fac.pass-0000.cbor  Fac.pass-0024.cbor  HelloWorld.pass-0021.cbor  T13031.nouniq.verbose  T13031.pass-0005.cbor  T13031.pass-0021.cbor  T13031.verbose  T18231.nouniq.verbose  T18231.pass-0010.cbor  T18231.pass-0025.cbor  T18231.verbose
demos/ghc-9.ef9dbc/: Compose.pass-0000.cbor  Compose.pass-0001.cbor  Compose.pass-0002.cbor  Compose.pass-0010.cbor  Compose.pass-0014.cbor  Compose.pass-0016.cbor  Compose.pass-0017.cbor  Compose.pass-0019.cbor  Compose.pass-0020.cbor  Compose.pass-0021.cbor  Compose.pass-0022.cbor  Cpr.pass-0000.cbor  Cpr.pass-0003.cbor  Cpr.pass-0005.cbor  Cpr.pass-0007.cbor  Cpr.pass-0009.cbor  Cpr.pass-0010.cbor  Cpr.pass-0011.cbor  Cpr.pass-0013.cbor  Cpr.pass-0014.cbor  Cpr.pass-0017.cbor  Cpr.pass-0018.cbor  Cpr.pass-0019.cbor  Fac.pass-0002.cbor  Fac.pass-0003.cbor  Fac.pass-0004.cbor  Fac.pass-0005.cbor  Fac.pass-0006.cbor  Fac.pass-0007.cbor  Fac.pass-0008.cbor  Fac.pass-0009.cbor  Fac.pass-0010.cbor  Fac.pass-0011.cbor  Fac.pass-0012.cbor  Fac.pass-0013.cbor  Fac.pass-0014.cbor  Fac.pass-0015.cbor  Fac.pass-0016.cbor  Fac.pass-0017.cbor  Fac.pass-0018.cbor  (+52 more)
ghc-dump-core/: Ast.hs  Convert.hs  Plugin.hs  ghc-dump-core.cabal
ghc-dump-core/GhcDump/: Ast.hs  Convert.hs  Plugin.hs
ghc-dump-util/: Main.hs  Util.hs  ghc-dump-util.cabal  test.css
ghc-dump-util/GhcDump/: Pretty.hs  Repl.hs  Util.hs
ghc-dump-util/exe/: Common.hs  FilterBindings.hs  Main.hs  Table.hs
ghc-dump-util/exe/Modes/: ListBindings.hs  Show.hs  Summarize.hs
ghc-dump-util/src/GhcDump/: Pretty.hs  Reconstruct.hs  ToHtml.hs  Util.hs
lib/CoreDiff/: Diff.hs  Preprocess.hs  PrettyPrint.hs  XAst.hs
src/CoreDiff/: Assimilate.hs  Convert.hs  Inline.hs  Pairing.hs  PrettyPrint.hs  StructDiff.hs  Util.hs  XAst.hs
(+53 files in other folders)
