name:                ghc-dump
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          bgamari.foss@gmail.com
copyright:           (c) 2017 Ben Gamari
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Convert, Ast, Plugin
  -- other-modules:       
  other-extensions:    GeneralizedNewtypeDeriving
  build-depends:       base >=4.9 && <4.10,
                       bytestring >= 0.10,
                       text >=1.2 && <1.3,
                       binary-serialise-cbor,
                       ghc
  default-language:    Haskell2010
