name:                ghc-dump-core
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          bgamari.foss@gmail.com
copyright:           (c) 2017 Ben Gamari
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
tested-with:         GHC==7.10.3, GHC==8.0.2, GHC==8.1
cabal-version:       >=1.10

library
  exposed-modules:     GhcDump.Convert, GhcDump.Ast, GhcDump.Plugin
  -- other-modules:       
  ghc-options:         -Wall
  other-extensions:    GeneralizedNewtypeDeriving
  build-depends:       base >=4.8 && <4.11,
                       bytestring >= 0.10,
                       text >=1.2 && <1.3,
                       filepath,
                       binary-serialise-cbor,
                       ghc >= 7.10 && < 8.4
  default-language:    Haskell2010
