name:                ghc-dump-util
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          bgamari.foss@gmail.com
copyright:           (c) 2017 Ben Gamari
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     GhcDump.Repl, GhcDump.Util, GhcDump.Pretty
  build-depends:       base < 5.0,
                       ghc-dump-core >=0.1 && <0.2,
                       bytestring >=0.10 && <0.11,
                       unordered-containers >= 0.2,
                       hashable >= 1.2,
                       text >= 1.0,
                       ansi-wl-pprint >= 0.6,
                       binary-serialise-cbor >=0.1 && <0.2
  default-language:    Haskell2010
