cabal-version:       3.0
name:                ghc-dump-util
version:             0.2.1.0
synopsis:            Handy tools for working with ghc-dump dumps
description:
  @ghc-dump@ is a library, GHC plugin, and set of tools for recording and
  analysing GHC's Core representation. The plugin is compatible with GHC 7.10
  through 8.3, exporting a consistent (albeit somewhat lossy) representation
  across these versions. The AST is encoded as CBOR, which is small and easy to
  deserialise.
  .
  This package provides the AST and compiler plugin. See the @ghc-dump-util@
  package for a useful command-line tool for working with dumps produced by this
  plugin.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@well-typed.com
copyright:           (c) 2017 Ben Gamari
category:            Development
build-type:          Simple
tested-with:         GHC==7.10.3,
                     GHC==8.0.2,
                     GHC==8.2.2,
                     GHC==8.4.4,
                     GHC==8.6.5,
                     GHC==8.8.3,
                     GHC==8.10.4,
                     GHC==9.0.1,
                     GHC==9.2.1,

source-repository head
  type: git
  location: https://github.com/bgamari/ghc-dump

library
  exposed-modules:     GhcDump.Repl,
                       GhcDump.Util,
                       GhcDump.Pretty,
                       GhcDump.Reconstruct,
                       GhcDump.ToHtml
  hs-source-dirs:      src
  build-depends:       base < 5.0,
                       ghc-dump-core >=0.2 && <0.3,
                       bytestring >=0.10 && <0.12,
                       unordered-containers >= 0.2,
                       hashable >= 1.2,
                       lucid,
                       text >= 1.0,
                       prettyprinter,
                       serialise >=0.2 && <0.3
  default-language:    Haskell2010

executable ghc-dump
  main-is:             Main.hs
  build-depends:       base < 5.0,
                       ghc-dump-core,
                       ghc-dump-util,
                       ansi-terminal,
                       prettyprinter,
                       prettyprinter-ansi-terminal,
                       regex-tdfa >= 1.3.1.0,
                       optparse-applicative >= 0.13
  default-language:    Haskell2010
